// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Topsort's purchase destination action: all fields 1`] = `
Object {
  "purchases": Array [
    Object {
      "id": "4mevd8V",
      "items": Array [
        Object {
          "productId": "4mevd8V",
          "quantity": -6621698275147776,
          "unitPrice": -66216982751477.76,
          "vendorId": "4mevd8V",
        },
      ],
      "occurredAt": "2021-02-01T00:00:00.000Z",
      "opaqueUserId": "4mevd8V",
    },
  ],
}
`;

exports[`Testing snapshot for Topsort's purchase destination action: required fields 1`] = `
Object {
  "purchases": Array [
    Object {
      "id": "4mevd8V",
      "items": Array [
        Object {
          "productId": "4mevd8V",
        },
      ],
      "occurredAt": "2021-02-01T00:00:00.000Z",
      "opaqueUserId": "4mevd8V",
    },
  ],
}
`;
